crates/puffin-cli/tests/snapshots/venv__create_venv.snap
---
source: crates/puffin-cli/tests/venv.rs
info:
  program: puffin
  args:
    - venv
    - /tmp/.tmpdq3Bck/.venv
    - "--python"
    - python3.12
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Using Python 3.11 at [PATH]
Creating virtual environment at: /home/ferris/project/.venv

