crates/puffin-cli/tests/snapshots/venv__create_venv_defaults_to_cwd.snap
---
source: crates/puffin-cli/tests/venv.rs
info:
  program: puffin
  args:
    - venv
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Using Python interpreter: /usr/bin/python3
Creating virtual environment at: .venv

